# nim

./: .gitignore  CMakeLists.txt  Nim.cpp  Nim.h  UDP_recv.cpp  UDP_send.cpp  UI.cpp  clientMain.cpp  connectsock.cpp  getBroadcastAdress.cpp  getIPAdressInfo.cpp  getServers.cpp  nim.sln  passivesock.cpp  playNIM.cpp  serverMain.cpp  teamevaluationform.txt  timestamp.cpp  ui.h  wait.cpp
nim/: nim.vcxproj  nim.vcxproj.filters
